Added part-4 to repo

--- a/search.html
+++ b/search.html
@@ -32,91 +32,153 @@
 <div class="container">
     <div class ="row">
         <div  class="col-sm-1">
-           <img src="plant.jpg" height="100" width="100" alt="image of a plant">
+           <img src="plant.jpg" id="im1" height="100" width="100" onclick="check(0)" alt="image of a plant">
         </div>
         <div class="col-sm-1">
-          <img src="plant.jpg" height="100" width="100" alt="image of a plant">
+          <img src="plant.jpg" id="im2" height="100" width="100" onclick="check(1)" alt="image of a plant">
        </div>
       <div  class="col-sm-1">
-          <img src="plant.jpg" height="100" width="100" alt="image of a plant">
+          <img src="plant.jpg" id="im3" height="100" width="100" onclick="check(2)" alt="image of a plant">
       </div>
       <div class="col-sm-1">
-          <img src="plant.jpg" height="100" width="100" alt="image of a plant">
+          <img src="plant.jpg" id="im4" height="100" width="100" onclick="check(3)" alt="image of a plant">
       </div>
       <div  class="col-sm-1">
-          <img src="plant.jpg" height="100" width="100" alt="image of a plant">
+          <img src="plant.jpg" id="im5" height="100" width="100" onclick="check(4)" alt="image of a plant">
       </div>
       <div  class="col-sm-1">
-          <img src="plant.jpg" height="100" width="100"  alt="image of a plant">
+          <img src="plant.jpg" id="im6" height="100" width="100" onclick="check(5)" alt="image of a plant">
       </div>
     </div>
   </div>
     <div class="container">
     <div class ="row">
       <div  class="col-sm-1">
-          <img src="plant.jpg" height="100" width="100" alt="image of a plant">
+          <img src="plant.jpg" id="im7" onclick="check(6)" height="100" width="100" alt="image of a plant">
       </div>
       <div  class="col-sm-1">
-          <img src="plant.jpg" height="100" width="100" alt="image of a plant">
+          <img src="plant.jpg" id="im8" height="100" width="100" onclick="check(7)" alt="image of a plant">
       </div>
       <div  class="col-sm-1">
-          <img src="plant.jpg" height="100" width="100" alt="image of a plant">
+          <img src="plant.jpg" id="im9" height="100" width="100" onclick="check(8)" alt="image of a plant">
       </div>
       <div  class="col-sm-1">
-          <img src="plant.jpg" height="100" width="100" alt="image of a plant">
+          <img src="plant.jpg" id="im10" height="100" width="100" onclick="check(9)" alt="image of a plant">
       </div>
       <div  class="col-sm-1">
-          <img src="plant.jpg" height="100" width="100" alt="image of a plant">
+          <img src="plant.jpg" id="im11" height="100" width="100" onclick="check(10)" alt="image of a plant">
       </div>
       <div  class="col-sm-1">
-          <img src="plant.jpg" height="100" width="100" alt="image of a plant">
+          <img src="plant.jpg" id="im12" height="100" width="100"  onclick="check(11)" alt="image of a plant">
       </div>
   </div >
     </div>
     <div class="container">
     <div class ="row">
       <div  class="col-sm-1">
-          <img src="plant.jpg" height="100" width="100" alt="image of a plant">
+          <img src="plant.jpg" id="im13" height="100" width="100" onclick="check(12)" alt="image of a plant">
       </div>
       <div  class="col-sm-1">
-          <img src="plant.jpg" height="100" width="100" alt="image of a plant">
+          <img src="plant.jpg" id="im14" height="100" width="100" onclick="check(13)" alt="image of a plant">
       </div>
       <div  class="col-sm-1">
-          <img src="plant.jpg" height="100" width="100" alt="image of a plant">
+          <img src="plant.jpg" id="im15" height="100" width="100" onclick="check(14)" alt="image of a plant">
       </div>
       <div  class="col-sm-1">
-          <img src="plant.jpg" height="100" width="100" alt="image of a plant">
+          <img src="plant.jpg"  id="im16" height="100" width="100" onclick="check(15)" alt="image of a plant">
       </div>
       <div  class="col-sm-1">
-          <img src="plant.jpg" height="100" width="100" alt="image of a plant">
+          <img src="plant.jpg" id="im17" height="100" width="100" onclick="check(16)" alt="image of a plant">
       </div>
       <div  class="col-sm-1">
-          <img src="plant.jpg" height="100" width="100" alt="image of a plant">
+          <img src="plant.jpg" id="im18" height="100" width="100" onclick="check(17)" alt="image of a plant">
       </div>
     </div>
   </div>
   <div class="container">
     <div class ="row">
       <div  class="col-sm-1">
-          <img src="plant.jpg" height="100" width="100" alt="image of a plant">
+          <img src="plant.jpg" id="im19" height="100" width="100" onclick="check(18)" alt="image of a plant">
       </div>
       <div  class="col-sm-1">
-          <img src="plant.jpg" height="100" width="100" alt="image of a plant">
+          <img src="plant.jpg" id="im20" height="100" width="100" onclick="check(19)" alt="image of a plant">
       </div>
       <div  class="col-sm-1">
-          <img src="plant.jpg" height="100" width="100" alt="image of a plant">
+          <img src="plant.jpg" id="im21" height="100" width="100" onclick="check(20)" alt="image of a plant">
       </div>
       <div  class="col-sm-1">
-          <img src="plant.jpg" height="100" width="100" alt="image of a plant">
+          <img src="plant.jpg" id="im22" height="100" width="100" onclick="check(21)" alt="image of a plant">
       </div>
       <div  class="col-sm-1">
-          <img src="plant.jpg" height="100" width="100" alt="image of a plant">
+          <img src="plant.jpg" id="im23" height="100" width="100"  onclick="check(22)" alt="image of a plant">
       </div>
       <div  class="col-sm-1">
-          <img src="plant.jpg" height="100" width="100" alt="image of a plant">
+          <img src="plant.jpg" id="im24" height="100" width="100" onclick="check(23)" alt="image of a plant">
       </div>
   </div >
     </div>
+    <script>
+        var ids = ["im1","im2","im3","im4","im5","im6","im7","im8","im9","im10","im11","im12","im13","im14","im15","im16","im17","im18","im19","im20","im21","im22","im23","im24"];
+        var triesCount = 0;
+        var animalLocation = 13;
+        var imageid;
+        function check(position)
+        {
+          for(let i=0;i<ids.length;i++)
+          {
+            if(i==position){
+                imageid = ids[i];
+            }
+          }  
+          console.log(position)
+          if(position == animalLocation)
+          {
+              document.getElementById(imageid).src= "animal.jpg"
+          }
+          else
+          {
+              
+              document.getElementById(imageid).src= "hole.jpg";
+          }
+          triesCount = triesCount+1;
+          document.getElementById("tries").innerHTML = "Number of tries is : "+triesCount;
+          dist = distance(position, animalLocation);
+          document.getElementById("distance").innerHTML = "Distance between animal location and your click position is : "+dist;
+        }
+          function distance(pos1,pos2)
+          {
+              var x1,y1;
+              var x2,y2;
+              if(pos1 == pos2)
+              {
+                  dpos1pos2 = 0;
+              } 
+              else
+              {
+                  var coordinates=[[0,1,2,3,4,5],[6,7,8,9,10,11],[12,13,14,15,16,17],[18,19,20,21,22,23]];
+                  for(let i=0;i<coordinates.length;i++)
+                  {
+                      for(let j=0;j<coordinates[0].length;j++)
+                      {
+                          if(coordinates[i][j]==pos1)
+                          {
+                            x1=i;
+                            y1=j;
+                          }
+                          if(coordinates[i][j]==pos2)
+                          {
+                            x2=i;
+                            y2=j;
+                          }                          
+                      }
+                  }
+                  dpos1pos2 = (Math.abs(x2-x1)+Math.abs(y2-y1));
+              }    
+              return dpos1pos2;         
+          }
+        
+
+    </script>
   
 </body>
 </html>
