--- a/reaction.html
+++ b/reaction.html
@@ -18,7 +18,7 @@
 
   <button type="button" id="starttimer"
   class="btn btn-primary"
-  >
+  onclick="startTime()">
   Start Timer</button>
 
   <button type="button" id="reactnow"
@@ -28,11 +28,31 @@
    
   <script> 
   var myTime = undefined;
+
   function recordReact() {
     myTime = Date.now();
     console.log(myTime)
   }
-
+  function startTime() {
+    for(let i=0; i<=3; i++){
+          setTimeout(()=>{
+              document.getElementById("count").innerHTML = "Count: " + i
+          }, (3-i)*1000)
+      }
+      setTimeout(()=>{
+          checkMyTime()
+      }, 3000)
+  }
+  function checkMyTime(){
+      var element = document.getElementById("timer")
+      if(myTime == undefined)
+          element.innerHTML = "Too Slow"
+      else{
+          var buttonTime = Date.now()
+          var difference = buttonTime - myTime
+          element.innerHTML = "Time was " + difference
+      }
+    }
   </script>
 
 </body>
